frontend/src/index.css
html, body, #root {
  width: 100%;
  height: 100%;
  margin: 0;
  padding: 0;
}

#root {
  max-width: none;
}

html, body {
  margin: 0;
  padding: 0;
  width: 100%;
}

body {
  background:
    /* Linear gradient similar to Omre original home page colors going downward */
    linear-gradient(
      180deg,
      #f3e6dc 0%,   
      #e0bfae 22%,   
      #b07a63 45%,   
      #6b2e22 70%,   
      #3b1a12 100%
    );
  display: block;
}

h1 {
  font-size: 3.2em;
  line-height: 1.1;
}


/* BELOW WE USE !IMPORTANT BECAUSE: It will override any preset for the amplify components
   This lets us override the base blues for toggles that we cannot edit and it will follow theming
   for other future pages in the future*/

/* typed text */
.amplify-input {
  color: #f5f5f5;
}

/* placeholder text for when entering name or email or password */
.amplify-input::placeholder {
  color: rgba(245, 245, 245, 0.55);
  opacity: 1;
}

/* labels will all be white */
.amplify-label {
  color: rgba(245, 245, 245, 0.85) !important;
}

/* label styling for the font and font size */
.amplify-field .amplify-label {
  font-family: 'Cormorant Garamond', serif;
  font-size: 1.3rem;
  font-weight: 600;
  letter-spacing: 0.3px;
}


/* input background. made it a transparent brown */
.amplify-field-group__control {
  background-color: #3b1a126d !important;
}

/* Base toggle button edits
  text color white, border color the same as others
*/
.amplify-togglebutton {
  
  background-color: rgba(59, 26, 18, 0.55) !important;
  color: #f5f5f5 !important;
  border: 1px solid rgba(245, 245, 245, 0.55) !important;
  transition: all 0.2s ease; /* smooth transition active states */
}

/* Active toggle button edits
  darker background when active, border color the same as others, text white
*/
.amplify-togglebutton[aria-pressed="true"] {
  background-color: rgba(151, 33, 0, 0.292) !important;
  border-color: rgba(245, 245, 245, 0.55) !important;
  color: #ffffff !important;
}

/* toggle button styling for the fonts */
button.amplify-togglebutton {
  font-family: 'Cormorant Garamond', serif;
  font-weight: 600;
  font-size: 1.1rem;
  letter-spacing: 0.3px;
}

